[package]
name = "dns-inspector"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
hickory-server = { version = "0.24.1" }
hickory-resolver = { version = "0.24.1", features = ["tokio-runtime", "dns-over-https-rustls"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
